Update snapshot which seems to include DESCRIPTION

--- a/tests/testthat/_snaps/file2/brew/test1.html
+++ b/tests/testthat/_snaps/file2/brew/test1.html
@@ -343,31 +343,24 @@ format(x, trim = TRUE, drop0trailing = TRUE, ...)</td></tr>
 </tbody></table>
 <br/><hr/>
 <h1><a name="Attached_Packages"></a>Attached Packages</h1>
-<h2><a name="brew"> </a>brew</h2><table><tbody><tr class=" o "><td class="l"> Package </td><td>brew</td></tr>
-<tr class=" e "><td class="l"> Type </td><td>Package</td></tr>
+<h2><a name="brew"> </a>brew</h2><table><tbody><tr class=" o "><td class="l"> Type </td><td>Package</td></tr>
+<tr class=" e "><td class="l"> Package </td><td>brew</td></tr>
 <tr class=" o "><td class="l"> Title </td><td>Templating Framework for Report Generation</td></tr>
 <tr class=" e "><td class="l"> Version </td><td>1.0-7</td></tr>
-<tr class=" o "><td class="l"> Date </td><td>2022-02-04</td></tr>
-<tr class=" e "><td class="l"> Authors@R </td><td>c(person(given="Jeffrey",
-family="Horner",
-role = c("aut", "cph")),
-person(given="Greg",
-family="Hunt",
-email = "greg_at_firmansyah.com",
-role = c("aut", "cre", "cph")))</td></tr>
-<tr class=" o "><td class="l"> Author </td><td>Jeffrey Horner [aut, cph],
-Greg Hunt [aut, cre, cph]</td></tr>
-<tr class=" e "><td class="l"> Maintainer </td><td>Greg Hunt &lt;greg_at_firmansyah.com&gt;</td></tr>
-<tr class=" o "><td class="l"> Description </td><td>Implements a templating framework for mixing text and
-R code for report generation. brew template syntax is similar
-to PHP, Ruby's erb module, Java Server Pages, and Python's psp
-module.</td></tr>
-<tr class=" e "><td class="l"> License </td><td>GPL-2</td></tr>
-<tr class=" o "><td class="l"> Repository </td><td>CRAN</td></tr>
-<tr class=" e "><td class="l"> Suggests </td><td>testthat (&gt;= 3.0.0)</td></tr>
-<tr class=" o "><td class="l"> Config/testthat/edition </td><td>3</td></tr>
+<tr class=" o "><td class="l"> Authors@R </td><td>c(
+person("Jeffrey", "Horner", role = c("aut", "cph")),
+person("Greg", "Hunt", , "greg_at_firmansyah.com", role = c("aut", "cre", "cph"))
+)</td></tr>
+<tr class=" e "><td class="l"> Description </td><td>Implements a templating framework for mixing text and R code
+for report generation. brew template syntax is similar to PHP, Ruby's
+erb module, Java Server Pages, and Python's psp module.</td></tr>
+<tr class=" o "><td class="l"> License </td><td>GPL-2</td></tr>
 <tr class=" e "><td class="l"> URL </td><td>https://github.com/gregfrog/brew</td></tr>
 <tr class=" o "><td class="l"> BugReports </td><td>https://github.com/gregfrog/brew/issues</td></tr>
+<tr class=" e "><td class="l"> Suggests </td><td>testthat (&gt;= 3.0.0)</td></tr>
+<tr class=" o "><td class="l"> Config/testthat/edition </td><td>3</td></tr>
+<tr class=" e "><td class="l"> Encoding </td><td>UTF-8</td></tr>
+<tr class=" o "><td class="l"> Repository </td><td>CRAN</td></tr>
 </tbody></table>
 <br/><hr/>
 <h2><a name="testthat"> </a>testthat</h2><table><tbody><tr class=" e "><td class="l"> Package </td><td>testthat</td></tr>
